# hmm-using-arrays

./: .gitignore  CMakeLists.txt  hmm.c  hmm.h  hmm_mpi.c  hmm_mpi.h
